shader and clipping fix

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body.light-mode {
   font-size: 20px;
   line-height: 1.4;
   margin: 0;
-  padding: 0;
+  padding: 70px 0 0 0;
   background-color: rgb(214, 214, 214);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
